--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
     <div id="welcome">
     <h1><img src="https://scontent.fmnl8-1.fna.fbcdn.net/v/t39.30808-1/441319810_3374329842712673_3622157928592670693_n.jpg?stp=dst-jpg_p160x160&_nc_cat=108&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeFuRpcEqw-5Tu8EQyJgepRt21iAd8IyI7HbWIB3wjIjsR-8G77erIdeNmurL6IFNDNsKvI8JKMUDxURDzgEU4Yt&_nc_ohc=eNOF3CJ3uH8Q7kNvgGRJ3qd&_nc_ht=scontent.fmnl8-1.fna&cb_e2o_trans=t&oh=00_AYDKTlAD692DGlDBFPt3LWZTnmg3Tap984mwPE3Fica7uQ&oe=6686C268" alt="my profile photo" width=100" style='vertical-align:middle; display:inline;'>Hi! My name is Danica Bea B. Neri and welcome to my simple profile web page!</h1>
     </div>
+
     <hr>
 
     <h2>BASIC INFO</h2>
