--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -8,12 +8,30 @@
 </head>
 
 <body>
-    <div id="welcome">
-    <h1><img src="https://scontent.fmnl8-1.fna.fbcdn.net/v/t39.30808-1/441319810_3374329842712673_3622157928592670693_n.jpg?stp=dst-jpg_p160x160&_nc_cat=108&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeFuRpcEqw-5Tu8EQyJgepRt21iAd8IyI7HbWIB3wjIjsR-8G77erIdeNmurL6IFNDNsKvI8JKMUDxURDzgEU4Yt&_nc_ohc=eNOF3CJ3uH8Q7kNvgGRJ3qd&_nc_ht=scontent.fmnl8-1.fna&cb_e2o_trans=t&oh=00_AYDKTlAD692DGlDBFPt3LWZTnmg3Tap984mwPE3Fica7uQ&oe=6686C268" alt="my profile photo" width=100" style='vertical-align:middle; display:inline;'>Hi! My name is Danica Bea B. Neri and welcome to my simple profile web page!</h1>
+    <div id="header-nav">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#" target="_blank">Projects</a>
+            <a href="#">Contacts</a>
+            <a href="/Fundamentals/contact.html">Contacts</a>
+            
+          </nav>
     </div>
 
-    <hr>
 
+    <div class="box">
+        <div id="box1">
+            <h2>Hi! My name is</h2>
+            <h1>DANICA BEA B NERI</h1>
+            <h2>Frontend Developer</h2>
+            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h4>
+        </div>
+        <div id="box2">
+            <img src="img/profile.JPG" id="profilepic" alt="my profile photo">
+        </div>
+    </div>
+    <hr>
+ <!-- 
     <h2>BASIC INFO</h2>
 
     <li>Random things about me:
@@ -44,12 +62,14 @@
     </li>
 
     <hr>
-
-    <ul>
-        <li><a href="#welcome">Go to top</a></li>
-        <li><a href="https://www.google.com" target="_blank">Google.com</a></li>
-        <li><a href="/Fundamentals/contact.html">Go To Contact Page</a></li>
-    </ul>
+-->
+<div id="footer-nav">
+    <nav>
+        <a href="#welcome">Go to top</a>
+        <a href="https://www.google.com" target="_blank">Google.com</a>
+        <a href="/Fundamentals/contact.html">Go To Contact Page</a>
+      </nav>
+</div>
 
     
 
