--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -12,9 +12,9 @@
         <nav>
             <a href="#">Home</a>
             <a href="#" target="_blank">Projects</a>
-            <a href="#">Contacts</a>
+            <a href="#">Trainings and Certificates</a>
             <a href="/Fundamentals/contact.html">Contacts</a>
-            
+
           </nav>
     </div>
 
@@ -65,9 +65,10 @@
 -->
 <div id="footer-nav">
     <nav>
-        <a href="#welcome">Go to top</a>
-        <a href="https://www.google.com" target="_blank">Google.com</a>
-        <a href="/Fundamentals/contact.html">Go To Contact Page</a>
+        <a href="#">Home</a>
+        <a href="#" target="_blank">Projects</a>
+        <a href="#">Trainings and Certificates</a>
+        <a href="/Fundamentals/contact.html">Contacts</a>
       </nav>
 </div>
 
