--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -9,24 +9,23 @@
 
 <body>
     <div id="header-nav">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#" target="_blank">Projects</a>
+        <nav id="head-nav">
+            <a href="/Fundamentals/index.html">Home</a>
+            <a href="/Fundamentals/projects.html">Projects</a>
             <a href="#">Trainings and Certificates</a>
             <a href="/Fundamentals/contact.html">Contacts</a>
-
           </nav>
     </div>
 
 
-    <div class="box">
-        <div id="box1">
+    <div class="main-box">
+        <div id="main-box1">
             <h2>Hi! My name is</h2>
             <h1>DANICA BEA B NERI</h1>
             <h2>Frontend Developer</h2>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h4>
         </div>
-        <div id="box2">
+        <div id="main-box2">
             <img src="img/profile.JPG" id="profilepic" alt="my profile photo">
         </div>
     </div>
@@ -65,8 +64,8 @@
 -->
 <div id="footer-nav">
     <nav>
-        <a href="#">Home</a>
-        <a href="#" target="_blank">Projects</a>
+        <a href="/Fundamentals/index.html">Home</a>
+        <a href="/Fundamentals/projects.html">Projects</a>
         <a href="#">Trainings and Certificates</a>
         <a href="/Fundamentals/contact.html">Contacts</a>
       </nav>
