--- a/fundamentals/contact.html
+++ b/fundamentals/contact.html
@@ -9,7 +9,7 @@
 <body>
 
   <div id="header-nav">
-    <nav = head-nav>
+    <nav id= "head-nav">
         <a href="/Fundamentals/index.html">Home</a>
         <a href="/Fundamentals/projects.html">Projects</a>
         <a href="#">Trainings and Certificates</a>
@@ -94,7 +94,7 @@
   <hr>
 
   <div id="footer-nav">
-    <nav>
+    <nav id="foot-nav">
       <a href="/Fundamentals/index.html">Home</a>
       <a href="/Fundamentals/projects.html">Projects</a>
       <a href="#">Trainings and Certificates</a>
