--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -63,7 +63,7 @@
     <hr>
 -->
 <div id="footer-nav">
-    <nav>
+    <nav id="foot-nav">
         <a href="/Fundamentals/index.html">Home</a>
         <a href="/Fundamentals/projects.html">Projects</a>
         <a href="#">Trainings and Certificates</a>
