--- a/fundamentals/contact.html
+++ b/fundamentals/contact.html
@@ -36,8 +36,12 @@
     </select>
   </div>
   <div id="contact-grid1">
-    <label for="firstName">*Of course your First Name:</label>
-    <input type="text" name="firstName" id="firstName" required />
+    <label for="address">Finally! What is your question?:</label>
+    <textarea name="question" id="question" rows="1" cols="50"></textarea>
+    <br> 
+    <br>
+    <input type="button" value="Send question">
+    
   </div>
 
   
