--- a/fundamentals/contact.html
+++ b/fundamentals/contact.html
@@ -10,10 +10,10 @@
 
   <div id="header-nav">
     <nav id= "head-nav">
-        <a href="/Fundamentals/index.html">Home</a>
-        <a href="/Fundamentals/projects.html">Projects</a>
-        <a href="#">Trainings and Certificates</a>
-        <a href="/Fundamentals/contact.html">Contacts</a>
+      <a href="/Fundamentals/index.html">Home</a>
+      <a href="index.html#project-box">Projects</a>
+      <a href="#">Trainings and Certificates</a>
+      <a href="/Fundamentals/contact.html">Contacts</a>
       </nav>
 </div>
 <br>
