--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -11,7 +11,7 @@
     <div id="header-nav">
         <nav id="head-nav">
             <a href="/Fundamentals/index.html">Home</a>
-            <a href="/Fundamentals/projects.html">Projects</a>
+            <a href="#project-box">Projects</a>
             <a href="#">Trainings and Certificates</a>
             <a href="/Fundamentals/contact.html">Contacts</a>
           </nav>
@@ -29,39 +29,43 @@
             <img src="img/profile.JPG" id="profilepic" alt="my profile photo">
         </div>
     </div>
-    <hr>
- <!-- 
-    <h2>BASIC INFO</h2>
 
-    <li>Random things about me:
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778735.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
-        I would like to believe that I am musically inclined.</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778741.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        I love to swim and I also do free diving.</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/3361/3361135.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        I don't function without coffee</ul>
-    </li>
+    <div id="project-box">
+        <br>
+        <h2>PERSONAL PROJECTS</h2>
 
-    <li>Sports that I played / Into right now:
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/4072/4072149.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
-        I represented my municipality in Palarong panlalawigan. The sport? Well just look at the icon ;)</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/5029/5029622.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        I play volleyball but I'm not that good at it. It's one of those things that I wish I was <strong>ACTUALLY</strong> good at.</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/2593/2593874.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        I am currently getting into <strong>Basketball</strong></ul>
-    </li>
-
-    <li>My past times:
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/1402/1402480.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
-        I like to play pc games with my friends thru Discord</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/4221/4221484.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        I also like to watch movies, MOVIES not SERIES :D unless...</ul>
-        <ul><img src="https://cdn-icons-png.flaticon.com/128/15427/15427945.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
-        It's Anime cause I'm into that shizz</ul>
-    </li>
-
-    <hr>
--->
+        <div id="project-box1">
+            <li>Random things about me:
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778735.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+                I would like to believe that I am musically inclined.</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778741.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                I love to swim and I also do free diving.</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/3361/3361135.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                I don't function without coffee</ul>
+            </li>
+        </div>
+        <div id="project-box2">
+            <li>Sports that I played / Into right now:
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/4072/4072149.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+                I represented my municipality in Palarong panlalawigan. The sport? Well just look at the icon ;)</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/5029/5029622.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                I play volleyball but I'm not that good at it. It's one of those things that I wish I was <strong>ACTUALLY</strong> good at.</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/2593/2593874.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                I am currently getting into <strong>Basketball</strong></ul>
+            </li>
+        </div>
+        <div id="project-box3">
+            <li>My past times:
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/1402/1402480.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+                I like to play pc games with my friends thru Discord</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/4221/4221484.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                I also like to watch movies, MOVIES not SERIES :D unless...</ul>
+                <ul><img src="https://cdn-icons-png.flaticon.com/128/15427/15427945.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+                It's Anime cause I'm into that shizz</ul>
+            </li>
+        </div>
+    </div>   
+ 
 <div id="footer-nav">
     <nav id="foot-nav">
         <a href="/Fundamentals/index.html">Home</a>
