--- a/fundamentals/contact.html
+++ b/fundamentals/contact.html
@@ -12,41 +12,92 @@
     <nav id= "head-nav">
       <a href="/Fundamentals/index.html">Home</a>
       <a href="index.html#project-box">Projects</a>
-      <a href="#">Trainings and Certificates</a>
+      <a href="contact.html#trainings">Trainings and Certificates</a>
       <a href="/Fundamentals/contact.html">Contacts</a>
       </nav>
 </div>
-<br>
-<h1 id="top">Do you have any questions? I hope not... Just kidding, just fill out the form below!</h1>
-<div class="contact-box">
-  <div id="contact-grid1">
-    <label for="firstName">*First Name:</label>
-    <input type="text" name="firstName" id="firstName" required />
-  </div>
-  <div id="contact-grid1">
-    <label for="lastName">*Last Name:</label>
-    <input type="text" name="lastName" id="lastName" />
-  </div>
-  <div id="contact-grid1">
-    <label for="gender">Gender:</label>
-    <select name="gender" id="gender">
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-      <option value="noGender">No Gender</option>
-    </select>
-  </div>
-  <div id="contact-grid1">
-    <label for="address">Finally! What is your question?:</label>
-    <textarea name="question" id="question" rows="1" cols="50"></textarea>
-    <br> 
-    <br>
-    <input type="button" value="Send question">
-    
-  </div>
+<div id="project-box">
+  <br>
+  <h2 class="trainings">TRAININGS AND CERTIFICATES</h2>
 
-  
+  <div id="project-box1">
+      <li>Random things about me:
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778735.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+          I would like to believe that I am musically inclined.</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/16778/16778741.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          I love to swim and I also do free diving.</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/3361/3361135.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          I don't function without coffee</ul>
+      </li>
+  </div>
+  <div id="project-box2">
+      <li>Sports that I played / Into right now:
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/4072/4072149.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+          I represented my municipality in Palarong panlalawigan. The sport? Well just look at the icon ;)</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/5029/5029622.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          I play volleyball but I'm not that good at it. It's one of those things that I wish I was <strong>ACTUALLY</strong> good at.</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/2593/2593874.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          I am currently getting into <strong>Basketball</strong></ul>
+      </li>
+  </div>
+  <div id="project-box3">
+      <li>My past times:
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/1402/1402480.png" alt="" width=50 style='vertical-align:middle; display:inline;'>
+          I like to play pc games with my friends thru Discord</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/4221/4221484.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          I also like to watch movies, MOVIES not SERIES :D unless...</ul>
+          <ul><img src="https://cdn-icons-png.flaticon.com/128/15427/15427945.png" alt="" width=50 style='vertical-align:middle; display:inline;'> 
+          It's Anime cause I'm into that shizz</ul>
+      </li>
+  </div>
+</div>  
+<br>
+<center><div class="contact">
+  <div class="note1">
+    <h1>Do you have any questions? Kindly fill out the form below!</h1>
+  </div>
+  <div class="contact-box">
+
+
+    <div id="c1r1">
+      <label for="firstName" id="fname">*First Name:</label>
+    </div>
+    <div id="c2r1">
+      <input type="text" name="firstName" id="firstName" required />
+    </div>
+    <div id="c1r2">
+      <label for="lastName" id="lname">*Last Name:</label>
+    </div>
+    <div id="c2r1">
+      <input type="text" name="firstName" id="firstName" required />
+    </div>
+    <div id="c1r3">
+      <label for="question" id="qtion">Finally! What is your question?:</label>
+    </div>
+    <div id="c2r3">
+      <textarea name="question" id="question" rows="1"></textarea>
+    </div>
+  </div>
+  <div id="submitbtn">
+    <input type="button" id="submitBtn" value="Send question">
+    </div>
 
 </div>
+
+</center>
+  <hr>
+
+  <div id="footer-nav">
+    <nav id="foot-nav">
+      <a href="/Fundamentals/index.html">Home</a>
+      <a href="/Fundamentals/projects.html">Projects</a>
+      <a href="#">Trainings and Certificates</a>
+      <a href="/Fundamentals/contact.html">Contacts</a>
+    </nav>
+</div>
+</body>
+</html>
+
 
   <!--
   <center>
@@ -95,15 +146,3 @@
     </form>
   </center>
     -->
-  <hr>
-
-  <div id="footer-nav">
-    <nav id="foot-nav">
-      <a href="/Fundamentals/index.html">Home</a>
-      <a href="/Fundamentals/projects.html">Projects</a>
-      <a href="#">Trainings and Certificates</a>
-      <a href="/Fundamentals/contact.html">Contacts</a>
-    </nav>
-</div>
-</body>
-</html>
