--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -9,11 +9,11 @@
 
 <body>
     <div id="header-nav">
-        <nav id="head-nav">
-            <a href="/Fundamentals/index.html">Home</a>
-            <a href="#project-box">Projects</a>
-            <a href="#">Trainings and Certificates</a>
-            <a href="/Fundamentals/contact.html">Contacts</a>
+        <nav id= "head-nav">
+          <a href="/Fundamentals/index.html">Home</a>
+          <a href="index.html#project-box">Projects</a>
+          <a href="contact.html#trainings">Trainings and Certificates</a>
+          <a href="/Fundamentals/contact.html">Contacts</a>
           </nav>
     </div>
 
